# tale

./: .commitlintrc.json  .dockerignore  .env.example  .env.test  .git-blame-ignore-revs  .gitattributes  .gitignore  .mcp.json  .oxfmtrc.json  .oxlintrc.json  .sops.yaml  .trivyignore  .trivyignore.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.de.md  README.fr.md  README.md  commitlint.config.mjs  components.json  compose.blue.yml  compose.dev.yml  compose.docs.test.yml  compose.docs.yml  compose.green.yml  compose.test.yml  compose.web.test.yml  compose.web.yml  compose.yml  docker-compose.test-mock.yml  knip-results.json  knip.config.ts  package-lock.json  package.json  platform-exec.sh  plopfile.ts  tsconfig.base.json  turbo.json
services/crawler/: .gitignore  Dockerfile  Dockerfile.dockerignore  README.md  docker-entrypoint.sh  package.json  pyproject.toml  requirements.txt  test-crawler.sh
services/crawler/app/: __init__.py  config.py  converter_service.py  crawler_service.py  docx_service.py  exceptions.py  main.py  models.py  pptx_service.py  telemetry.py  template_service.py
services/crawler/app/routers/: __init__.py  crawler.py  docx.py  image.py  index.py  pages.py  pdf.py  pptx.py  search.py  web.py  websites.py
services/crawler/app/services/: __init__.py  base_converter.py  chunking_service.py  crawler_service.py  database.py  discovery_store.py  docx_roundtrip_service.py  docx_service.py  docx_track_changes.py  embedding_service.py  file_parser_service.py  html_to_docx_converter.py  html_to_pptx_converter.py  image_service.py  index_health.py  indexing_service.py  pdf_service.py  pg_website_store.py  pptx_service.py  scheduler.py  search_service.py  template_service.py  web_image_extractor.py  website_store.py
services/crawler/app/utils/: content_type.py  http_download.py  metadata.py  paragraph_dedup.py  structured_data.py
services/crawler/migrations/: 00000000000000_baseline.sql  20260424000001_add_chunk_core_overlap_columns.sql
services/crawler/tests/: conftest.py  test_acquire_with_retry.py  test_chunking_service.py  test_config.py  test_crawl_single_url.py  test_crawler_service.py  test_database.py  test_deleted_url_counts.py  test_docx_converter.py  test_docx_roundtrip.py  test_embedding_service.py  test_index_health.py  test_index_router.py  test_indexing_service.py  test_llm_cache.py  test_markdown_normalize.py  test_markdown_to_html.py  test_pages_router.py  test_paragraph_dedup.py  test_scheduler_errors.py  test_search_router.py  test_search_service.py  test_structured_data.py  test_stuck_scan_recovery.py  test_web_image_extractor.py  test_web_router.py  test_website_store.py  test_websites_router.py
services/graph-db/: Dockerfile  package.json  pyproject.toml  requirements.txt
services/graph-db/app/: __init__.py  config.py  database.py  main.py
services/operator/: Dockerfile  docker-entrypoint.sh  litellm_config.yaml  package.json  pyproject.toml
services/operator/app/: __init__.py  config.py  main.py  models.py  telemetry.py
services/operator/app/lib/: __init__.py  agent_client.py  mcp_client.py  vision_client.py
services/operator/app/mcp/: __init__.py  vision_server.py
services/operator/app/routers/: browser.py
services/operator/app/services/: __init__.py  agent_loop.py  browser_pool.py  browser_service.py  workspace_manager.py
services/operator/tests/: conftest.py  test_agent_loop.py  test_browser_pool.py  test_config.py  test_output_accumulator.py  test_phase2_summarization.py
services/rag/: Dockerfile  Dockerfile.dockerignore  README.md  docker-entrypoint.sh  package.json  pyproject.toml  requirements.txt  test-setup.sh
services/rag/app/: __init__.py  auth.py  config.py  main.py  models.py  secret_scanner.py  telemetry.py  utils.py
services/rag/app/routers/: __init__.py  documents.py  health.py  jobs.py  llm_cache.py  search.py
services/rag/app/services/: __init__.py  cognee_service.py  database.py  diff_service.py  indexing_service.py  job_store.py  job_store_db.py  llm_response_cache.py  rag_service.py  search_service.py  semantic_cache.py
services/rag/app/utils/: __init__.py  model_list.py  sanitize.py
services/rag/migrations/: 00000000000000_baseline.sql  20260325000001_add_documents_error_column.sql  20260325000002_add_documents_content_hash_index.sql  20260325000004_add_document_date_columns.sql  20260408000001_create_semantic_cache_table.sql  20260411000002_add_document_ocr_applied_column.sql  20260424000001_add_chunk_core_overlap_columns.sql  20260507000001_drop_llm_response_cache.sql
services/rag/tests/: concurrent_read_test.ts  test_add_document_dedup.py  test_background_ingest.py  test_compare_files.py  test_config.py  test_diff_service.py  test_document_content.py  test_document_helpers.py  test_extension_sync.py  test_file_dates.py  test_indexing_service.py  test_rag_service.py  test_search_service.py  test_secret_scanner.py  test_telemetry.py
services/web/: .env.example  .gitignore  .oxlintrc.json  Dockerfile  Dockerfile.dockerignore  README.md  docker-entrypoint.sh  index.html  package.json  pyproject.toml  server.ts  tailwind.config.ts  tsconfig.json  tsr.config.json  vite.config.ts  vitest.config.ts  vitest.ui.config.ts
services/web/app/: config.py  entry-server.tsx  globals.css  locals.css  main.py  main.tsx  routeTree.gen.ts  router.tsx
services/web/app/components/: progress-bar.tsx
services/web/app/pages/: contact-page.tsx  hardware-pricing-page.tsx  home-page.tsx  legal-page.tsx  pricing-page.tsx  request-demo-page.tsx
services/web/app/routers/: browser.py
services/web/app/routes/: $lang.tsx  __root.tsx  contact.tsx  hardware-pricing.tsx  index.tsx  pricing.tsx  request-demo.tsx
services/web/app/services/: __init__.py  browser_service.py
services/web/lib/: docs-url.ts  external-links.ts
services/web/lib/forms/: discord-embeds.ts  (+4 more)
services/web/messages/: de-CH.json  de.json  en.json  fr.json  global.json
services/web/public/: manifest.webmanifest  robots.txt
services/web/scripts/: build-llms-artifacts.ts  generate-legal-pdfs.ts  legal-routes.ts  prerender.ts  seo.config.ts
(+7583 files in other folders)
