[project]
name = "tale-crawler"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.128.1",
    "uvicorn[standard]==0.40.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "crawl4ai==0.8.0",
    "beautifulsoup4==4.14.3",
    "python-multipart==0.0.20",
    "python-dotenv==1.2.1",
    "loguru==0.7.3",
    "httpx==0.28.1",
    "markdown==3.10.1",
    "python-pptx==1.0.2",
    "python-docx==1.2.0",
    "pymupdf==1.26.7",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.0",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest-watch==4.2.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
