[project]
name = "tale-crawler"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.135.1",
    "uvicorn[standard]==0.41.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "crawl4ai==0.8.0",
    "beautifulsoup4==4.14.3",
    "python-multipart==0.0.22",
    "python-dotenv==1.2.2",
    "loguru==0.7.3",
    "httpx==0.28.1",
    "markdown-it-py>=3.0.0",
    "python-pptx==1.0.2",
    "python-docx==1.2.0",
    "pymupdf==1.27.2",
    "openai>=1.0.0",
    "asyncpg>=0.30.0",
    "tiktoken>=0.9.0",
    "semantic-text-splitter>=0.18.0",
    "stamina>=25.0.0",
    "tale-telemetry",
    "tale-knowledge",
    "tale-shared",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.6",
    "pytest==9.0.2",
    "pytest-asyncio>=0.23.0",
    "pytest-cov==7.0.0",
    "pytest-watch==4.2.0",
]

[tool.uv.sources]
tale-telemetry = { path = "../../packages/tale_telemetry" }
tale-knowledge = { path = "../../packages/tale_knowledge" }
tale-shared = { path = "../../packages/tale_shared" }

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
