[project]
name = "tale-graph-db"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.128.0",
    "uvicorn==0.40.0",
    "kuzu==0.11.3",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "loguru==0.7.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-watch>=4.2.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
