[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tale-graph-db"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.128.1",
    "uvicorn==0.40.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "loguru==0.7.3",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.0",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest-watch==4.2.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
