[project]
name = "tale-operator"
version = "0.1.0"
description = "AI-powered operator service with direct Playwright browser automation"
requires-python = "==3.14.3"
dependencies = [
    "fastapi==0.128.5",
    "uvicorn==0.40.0",
    "httpx==0.28.1",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "loguru==0.7.3",
    "playwright==1.58.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.1",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
