[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tale-rag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "tale-knowledge",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "openai>=1.0.0",
    "asyncpg>=0.30.0",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.2.0",
    "loguru>=0.7.0",
    "httpx>=0.28.0",
    "stamina>=25.0.0",
    "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.4",
    "pytest==9.0.2",
    "pytest-asyncio>=0.23.0",
    "pytest-cov==7.0.0",
    "pytest-watch==4.2.0",
]

[tool.uv.sources]
tale-knowledge = { path = "../../packages/tale_knowledge" }
tale-shared = { path = "../../packages/tale_shared" }

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
