[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "tale-rag"
version = "0.1.0"
requires-python = "==3.14.3"
dependencies = [
    "tale-knowledge",
    "fastapi==0.128.0",
    "uvicorn[standard]==0.40.0",
    "pydantic==2.11.10",
    "pydantic-settings==2.12.0",
    "openai==2.15.0",
    "asyncpg==0.31.0",
    "python-multipart==0.0.20",
    "python-dotenv==1.2.1",
    "loguru==0.7.3",
    "httpx==0.28.1",
    "stamina==25.2.0",
    "tale-telemetry",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.6",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest-watch==4.2.0",
]

[tool.uv.sources]
tale-telemetry = { path = "../../packages/tale_telemetry" }
tale-knowledge = { path = "../../packages/tale_knowledge" }
tale-shared = { path = "../../packages/tale_shared" }

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
